--- a/Source/OcrEngine/Prax.OcrEngine.Website/Prax.OcrEngine.Website.csproj
+++ b/Source/OcrEngine/Prax.OcrEngine.Website/Prax.OcrEngine.Website.csproj
@@ -92,6 +92,7 @@
       <Link>CustomDictionary.xml</Link>
     </CodeAnalysisDictionary>
     <Content Include="Content\CSS\YUI-Reset.css" />
+    <Content Include="Content\Images\Logo.png" />
     <Content Include="Global.asax" />
     <Content Include="Views\Content\About.aspx" />
     <Content Include="Views\Content\Contact.aspx" />
