--- a/Source/OcrEngine/Prax.OcrEngine.Website/Prax.OcrEngine.Website.csproj
+++ b/Source/OcrEngine/Prax.OcrEngine.Website/Prax.OcrEngine.Website.csproj
@@ -41,6 +41,15 @@
     <AssemblyOriginatorKeyFile>Prax.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Autofac">
+      <HintPath>..\..\..\Assemblies\Autofac.dll</HintPath>
+    </Reference>
+    <Reference Include="Autofac.Integration.Web">
+      <HintPath>..\..\..\Assemblies\Autofac.Integration.Web.dll</HintPath>
+    </Reference>
+    <Reference Include="Autofac.Integration.Web.Mvc">
+      <HintPath>..\..\..\Assemblies\Autofac.Integration.Web.Mvc.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Microsoft.WindowsAzure.Diagnostics" />
     <Reference Include="Microsoft.WindowsAzure.ServiceRuntime" />
@@ -80,10 +89,12 @@
   <ItemGroup>
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\ContentController.cs" />
+    <Compile Include="Controllers\DocumentsController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountModels.cs" />
+    <Compile Include="Models\DocumentModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WebRole.cs" />
   </ItemGroup>
@@ -99,6 +110,8 @@
     <Content Include="Views\Content\FAQ.aspx" />
     <Content Include="Views\Content\Home.aspx" />
     <Content Include="Views\Content\Privacy.aspx" />
+    <Content Include="Views\Content\SiteIntro.ascx" />
+    <Content Include="Views\Documents\DocumentList.aspx" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -132,6 +145,16 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Prax.snk" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Prax.OcrEngine.Common\Prax.OcrEngine.Common.csproj">
+      <Project>{B972ABB6-84DD-4E56-B932-2DE539EC86F9}</Project>
+      <Name>Prax.OcrEngine.Common</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Prax.OcrEngine.Engine\Prax.OcrEngine.Engine.csproj">
+      <Project>{0507F74F-3DB1-4FBE-A804-664D2FE52CA5}</Project>
+      <Name>Prax.OcrEngine.Engine</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
