Working dummy logic for document management

--- a/Source/OcrEngine/Prax.OcrEngine.Website/Web.config
+++ b/Source/OcrEngine/Prax.OcrEngine.Website/Web.config
@@ -69,6 +69,8 @@
 				<add namespace="System.Web.Mvc.Ajax" />
 				<add namespace="System.Web.Mvc.Html" />
 				<add namespace="System.Web.Routing" />
+
+				<add namespace="Prax.OcrEngine" />
 			</namespaces>
 		</pages>
 	</system.web>
