--- a/Source/OcrEngine/Prax.OcrEngine.Common/Prax.OcrEngine.Common.csproj
+++ b/Source/OcrEngine/Prax.OcrEngine.Common/Prax.OcrEngine.Common.csproj
@@ -50,8 +50,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Extensions.cs" />
+    <Compile Include="IDocumentManager.cs" />
     <Compile Include="IDocumentProcessor.cs" />
+    <Compile Include="InMemoryDocumentManager.cs" />
+    <Compile Include="IUserAccount.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UserlessAuthenticator.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Prax.snk" />
