--- a/Source/OcrEngine/Prax.OcrEngine.Common/Prax.OcrEngine.Common.csproj
+++ b/Source/OcrEngine/Prax.OcrEngine.Common/Prax.OcrEngine.Common.csproj
@@ -51,13 +51,16 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Extensions.cs" />
-    <Compile Include="IDocumentManager.cs" />
-    <Compile Include="IDocumentProcessor.cs" />
-    <Compile Include="InMemoryDocumentManager.cs" />
-    <Compile Include="IUserAccount.cs" />
+    <Compile Include="Services\IAuthenticator.cs" />
+    <Compile Include="Services\IDocumentManager.cs" />
+    <Compile Include="Services\IDocumentProcessor.cs" />
+    <Compile Include="Services\Stubs\InMemoryDocumentManager.cs" />
+    <Compile Include="Services\IUserAccount.cs" />
     <Compile Include="MimeTypes.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UserlessAuthenticator.cs" />
+    <Compile Include="Services\Stubs\InMemoryUserAccount.cs" />
+    <Compile Include="Services\Stubs\UselessProcessor.cs" />
+    <Compile Include="Services\Stubs\UserlessAuthenticator.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Prax.snk" />
