--- a/Source/OcrEngine/Prax.OcrEngine.Website/Web.config
+++ b/Source/OcrEngine/Prax.OcrEngine.Website/Web.config
@@ -11,7 +11,6 @@
 			<listeners>
 				<add type="Microsoft.WindowsAzure.Diagnostics.DiagnosticMonitorTraceListener, Microsoft.WindowsAzure.Diagnostics, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"
 				  name="AzureDiagnostics">
-					<filter type="" />
 				</add>
 			</listeners>
 		</trace>
@@ -71,6 +70,8 @@
 				<add namespace="System.Web.Routing" />
 
 				<add namespace="Prax.OcrEngine" />
+				<add namespace="Prax.OcrEngine.Website" />
+				<add namespace="Prax.OcrEngine.Website.Views" />
 			</namespaces>
 		</pages>
 	</system.web>
