--- a/Source/OcrEngine/Prax.OcrEngine.Website/Web.config
+++ b/Source/OcrEngine/Prax.OcrEngine.Website/Web.config
@@ -72,6 +72,7 @@
 				<add namespace="Prax.OcrEngine" />
 				<add namespace="Prax.OcrEngine.Website" />
 				<add namespace="Prax.OcrEngine.Website.Views" />
+				<add namespace="Prax.OcrEngine.Website.Models" />
 			</namespaces>
 		</pages>
 	</system.web>
