Javascript Document classes

--- a/Source/OcrEngine/Prax.OcrEngine.Website/Prax.OcrEngine.Website.csproj
+++ b/Source/OcrEngine/Prax.OcrEngine.Website/Prax.OcrEngine.Website.csproj
@@ -116,7 +116,6 @@
     <Content Include="Content\CSS\YUI-Reset.css" />
     <Content Include="Content\Images\Logo.png" />
     <Content Include="Content\Javascript\DocTableUpdater.js" />
-    <Content Include="Content\Javascript\Prax.DocumentRow.js" />
     <Content Include="Content\Javascript\ProgressBar.js" />
     <Content Include="Global.asax" />
     <Content Include="Views\Content\About.aspx" />
@@ -159,6 +158,7 @@
     <Folder Include="App_Data\" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\Javascript\DocumentTable.js" />
     <None Include="Prax.snk" />
   </ItemGroup>
   <ItemGroup>
