Allow large uploads

--- a/Source/OcrEngine/Prax.OcrEngine.Website/Web.config
+++ b/Source/OcrEngine/Prax.OcrEngine.Website/Web.config
@@ -22,6 +22,8 @@
 	</connectionStrings>
 
 	<system.web>
+		<httpRuntime maxRequestLength="33554432"/>
+		
 		<httpModules>
 			<add name="ContainerDisposal" type="Autofac.Integration.Web.ContainerDisposalModule, Autofac.Integration.Web"/>
 		</httpModules>
