--- a/Source/OcrEngine/Prax.OcrEngine.Website/Prax.OcrEngine.Website.csproj
+++ b/Source/OcrEngine/Prax.OcrEngine.Website/Prax.OcrEngine.Website.csproj
@@ -113,6 +113,7 @@
       <Link>CustomDictionary.xml</Link>
       <SubType>Designer</SubType>
     </CodeAnalysisDictionary>
+    <Content Include="Content\CSS\ProgressBar.css" />
     <Content Include="Content\CSS\YUI-Reset.css" />
     <Content Include="Content\Images\DeleteSprite.gif" />
     <Content Include="Content\Images\Logo.png" />
