--- a/Source/OcrEngine/Prax.OcrEngine.Website/Prax.OcrEngine.Website.csproj
+++ b/Source/OcrEngine/Prax.OcrEngine.Website/Prax.OcrEngine.Website.csproj
@@ -116,6 +116,7 @@
     <Content Include="Content\CSS\ProgressBar.css" />
     <Content Include="Content\CSS\YUI-Reset.css" />
     <Content Include="Content\Images\DeleteSprite.gif" />
+    <Content Include="Content\Images\Loading16.gif" />
     <Content Include="Content\Images\Logo.png" />
     <Content Include="Content\Javascript\DocumentUpload.js" />
     <Content Include="Content\Javascript\Utilities.js" />
