Azure Queue workers (incomplete)

--- a/Source/OcrEngine/Prax.OcrEngine.Services.Azure/Prax.OcrEngine.Services.Azure.csproj
+++ b/Source/OcrEngine/Prax.OcrEngine.Services.Azure/Prax.OcrEngine.Services.Azure.csproj
@@ -51,7 +51,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AzureProcessorController.cs" />
+    <Compile Include="AzureScanWorker.cs" />
     <Compile Include="AzureStorageClient.cs" />
+    <Compile Include="InMemoryWorkerPool.cs" />
     <Compile Include="Utils.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
