--- a/Source/OcrEngine/Prax.OcrEngine.Services.Azure/Prax.OcrEngine.Services.Azure.csproj
+++ b/Source/OcrEngine/Prax.OcrEngine.Services.Azure/Prax.OcrEngine.Services.Azure.csproj
@@ -43,6 +43,7 @@
     <Reference Include="Microsoft.WindowsAzure.StorageClient, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Data.Services.Client" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -54,6 +55,7 @@
     <Compile Include="AzureScanWorker.cs" />
     <Compile Include="AzureStorageClient.cs" />
     <Compile Include="InMemoryWorkerPool.cs" />
+    <Compile Include="SingleDeliveryQueueClient.cs" />
     <Compile Include="Utils.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
