--- a/Source/OcrEngine/Prax.OcrEngine.Services.Azure/Prax.OcrEngine.Services.Azure.csproj
+++ b/Source/OcrEngine/Prax.OcrEngine.Services.Azure/Prax.OcrEngine.Services.Azure.csproj
@@ -40,6 +40,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.WindowsAzure.Diagnostics, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
+    <Reference Include="Microsoft.WindowsAzure.ServiceRuntime, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="Microsoft.WindowsAzure.StorageClient, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -51,6 +52,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AzureDataCache.cs" />
     <Compile Include="AzureProcessorController.cs" />
     <Compile Include="AzureScanWorker.cs" />
     <Compile Include="AzureStorageClient.cs" />
