--- a/Source/OcrEngine/Prax.OcrEngine.Website/Prax.OcrEngine.Website.csproj
+++ b/Source/OcrEngine/Prax.OcrEngine.Website/Prax.OcrEngine.Website.csproj
@@ -113,7 +113,7 @@
     <Compile Include="Resources\IMinifier.cs" />
     <Compile Include="Resources\IResourceResolver.cs" />
     <Compile Include="Resources\ResourceLocator.cs" />
-    <Compile Include="Views\ViewsExtensions.cs" />
+    <Compile Include="Views\ResourcesExtensions.cs" />
     <Compile Include="WebRole.cs" />
   </ItemGroup>
   <ItemGroup>
