Render server-side results links

--- a/Source/OcrEngine/Prax.OcrEngine.Website/Prax.OcrEngine.Website.csproj
+++ b/Source/OcrEngine/Prax.OcrEngine.Website/Prax.OcrEngine.Website.csproj
@@ -114,6 +114,7 @@
     <Compile Include="Resources\IResourceResolver.cs" />
     <Compile Include="Resources\ResourceLocator.cs" />
     <Compile Include="Views\ResourcesExtensions.cs" />
+    <Compile Include="Views\ViewsExtensions.cs" />
     <Compile Include="WebRole.cs" />
   </ItemGroup>
   <ItemGroup>
