--- a/Source/OcrEngine/Prax.OcrEngine.Website/Web.config
+++ b/Source/OcrEngine/Prax.OcrEngine.Website/Web.config
@@ -23,7 +23,7 @@
 
 	<system.web>
 		<httpRuntime maxRequestLength="33554432"/>
-		
+
 		<httpModules>
 			<add name="ContainerDisposal" type="Autofac.Integration.Web.ContainerDisposalModule, Autofac.Integration.Web"/>
 		</httpModules>
@@ -72,6 +72,7 @@
 				<add namespace="System.Web.Routing" />
 
 				<add namespace="Prax.OcrEngine" />
+				<add namespace="Prax.OcrEngine.Services"/>
 				<add namespace="Prax.OcrEngine.Website" />
 				<add namespace="Prax.OcrEngine.Website.Views" />
 				<add namespace="Prax.OcrEngine.Website.Models" />
