--- a/Source/OcrEngine/Prax.OcrEngine.Common/Prax.OcrEngine.Common.csproj
+++ b/Source/OcrEngine/Prax.OcrEngine.Common/Prax.OcrEngine.Common.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Services\IUserAccount.cs" />
     <Compile Include="MimeTypes.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\Stubs\FixedConverters.cs" />
     <Compile Include="Services\Stubs\InMemoryStorage.cs" />
     <Compile Include="Services\Stubs\InMemoryUserAccount.cs" />
     <Compile Include="Services\Stubs\SimpleProcessorController.cs" />
