--- a/Source/OcrEngine/Prax.OcrEngine.RecognitionClient/Prax.OcrEngine.RecognitionClient.csproj
+++ b/Source/OcrEngine/Prax.OcrEngine.RecognitionClient/Prax.OcrEngine.RecognitionClient.csproj
@@ -75,6 +75,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="DocumentModel.cs" />
+    <Compile Include="LimitedConcurrencyLevelTaskScheduler.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
