--- a/Source/OcrEngine/Prax.OcrEngine.RecognitionClient/Prax.OcrEngine.RecognitionClient.csproj
+++ b/Source/OcrEngine/Prax.OcrEngine.RecognitionClient/Prax.OcrEngine.RecognitionClient.csproj
@@ -75,6 +75,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="DocumentModel.cs" />
+    <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="LimitedConcurrencyLevelTaskScheduler.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
@@ -120,6 +121,11 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Images\ClearAll16.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <CodeAnalysisDictionary Include="..\..\CustomDictionary.xml">
+      <Link>CustomDictionary.xml</Link>
+    </CodeAnalysisDictionary>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
