--- a/Source/OcrEngine/Prax.OcrEngine.RecognitionClient/Prax.OcrEngine.RecognitionClient.csproj
+++ b/Source/OcrEngine/Prax.OcrEngine.RecognitionClient/Prax.OcrEngine.RecognitionClient.csproj
@@ -127,6 +127,9 @@
       <Link>CustomDictionary.xml</Link>
     </CodeAnalysisDictionary>
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\Open32.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
