--- a/Source/RecognitionEngine/RecognitionEngine/RecognitionEngine.csproj
+++ b/Source/RecognitionEngine/RecognitionEngine/RecognitionEngine.csproj
@@ -41,6 +41,9 @@
     <Reference Include="PdfToImage">
       <HintPath>..\..\..\Assemblies\PdfToImage.dll</HintPath>
     </Reference>
+    <Reference Include="Prax.OcrEngine.Common">
+      <HintPath>..\..\OcrEngine\Prax.OcrEngine.Common\bin\Debug\Prax.OcrEngine.Common.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
