Implemented some of your "OCR code recomondations" including: 1) segmentator.labeledPixels is now an enum, 2) DisplayUtility is static, 3) removed the DetermineSegmentText method from the Tree structure, 4) improved the switch statment in IASL.getContextualForm and other minor deletions and fixes.

--- a/Source/RecognitionEngine/RecognitionEngine/RecognitionEngine.csproj
+++ b/Source/RecognitionEngine/RecognitionEngine/RecognitionEngine.csproj
@@ -79,6 +79,11 @@
     <Compile Include="TrainingData.cs" />
     <Compile Include="UploadDocument.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
