--- a/Source/RecognitionEngine/RecognitionEngine/RecognitionEngine.csproj
+++ b/Source/RecognitionEngine/RecognitionEngine/RecognitionEngine.csproj
@@ -41,12 +41,13 @@
     <Reference Include="PdfToImage">
       <HintPath>..\..\..\Assemblies\PdfToImage.dll</HintPath>
     </Reference>
-    <Reference Include="Prax.OcrEngine.Common">
+    <Reference Include="Prax.OcrEngine.Common, Version=1.0.0.0, Culture=neutral, PublicKeyToken=0c6ed9579881bcdc, processorArchitecture=MSIL">
       <HintPath>..\..\OcrEngine\Prax.OcrEngine.Common\bin\Debug\Prax.OcrEngine.Common.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Runtime.Serialization.Formatters.Soap" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -74,6 +75,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ResolvedSegment.cs" />
+    <Compile Include="SaveAndOpenUtility.cs" />
     <Compile Include="SegmentAnalysis.cs" />
     <Compile Include="Segmentator.cs" />
     <Compile Include="SegmentatorV2.cs" />
