--- a/Source/OcrEngine/Prax.OcrEngine.Engine/Prax.OcrEngine.Engine.csproj
+++ b/Source/OcrEngine/Prax.OcrEngine.Engine/Prax.OcrEngine.Engine.csproj
@@ -41,8 +41,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Engine.cs" />
+    <Compile Include="PatternRecognition\PatternRecognizer.cs" />
+    <Compile Include="PatternRecognition\RecognitionResult.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReferenceData\IReferenceSet.cs" />
+    <Compile Include="ReferenceData\ReferenceItem.cs" />
+    <Compile Include="ReferenceData\IReferenceLibrary.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Prax.OcrEngine.Common\Prax.OcrEngine.Common.csproj">
