--- a/Source/OcrEngine/Prax.OcrEngine.Engine/Prax.OcrEngine.Engine.csproj
+++ b/Source/OcrEngine/Prax.OcrEngine.Engine/Prax.OcrEngine.Engine.csproj
@@ -41,8 +41,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ImageRecognition\ImageData.cs" />
+    <Compile Include="ImageRecognition\ImageWorkflow.cs" />
     <Compile Include="PatternRecognition\PatternRecognizer.cs" />
-    <Compile Include="PatternRecognition\RecognitionResult.cs" />
+    <Compile Include="PatternRecognition\RecognizedPattern.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReferenceData\IReferenceSet.cs" />
     <Compile Include="ReferenceData\ReferenceItem.cs" />
