Added HeuristicArray, ProblemBoard and PRProblem classes

--- a/Source/OcrEngine/Prax.OcrEngine.Engine/Prax.OcrEngine.Engine.csproj
+++ b/Source/OcrEngine/Prax.OcrEngine.Engine/Prax.OcrEngine.Engine.csproj
@@ -41,11 +41,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="HeuristicArray\HeuristicArray.cs" />
     <Compile Include="ImageRecognition\ImageData.cs" />
     <Compile Include="ImageRecognition\ImageWorkflow.cs" />
     <Compile Include="PatternRecognition\PatternRecognizer.cs" />
     <Compile Include="PatternRecognition\RecognizedPattern.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="PRProblems\ProblemBoard.cs" />
+    <Compile Include="PRProblems\PRProblem.cs" />
     <Compile Include="ReferenceData\IReferenceSet.cs" />
     <Compile Include="ReferenceData\ReferenceItem.cs" />
     <Compile Include="ReferenceData\IReferenceLibrary.cs" />
