--- a/Source/OcrEngine/Prax.OcrEngine.Engine/Prax.OcrEngine.Engine.csproj
+++ b/Source/OcrEngine/Prax.OcrEngine.Engine/Prax.OcrEngine.Engine.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="HeuristicGeneration\DataMatrix.cs" />
     <Compile Include="HeuristicGeneration\HeuristicGenerator.cs" />
+    <Compile Include="ExposedFunctionality\ExposedFunctionality.cs" />
     <Compile Include="ReferenceData\InMemoryReferenceSet.cs" />
     <Compile Include="ReferenceData\IReferenceSet.cs" />
     <Compile Include="ReferenceData\ReferenceItem.cs" />
