--- a/Source/OcrEngine/SimpleWebDemo/SimpleWebDemo.csproj
+++ b/Source/OcrEngine/SimpleWebDemo/SimpleWebDemo.csproj
@@ -96,14 +96,19 @@
     <Content Include="Content\CSS\themes\base\jquery.ui.slider.css" />
     <Content Include="Content\CSS\themes\base\jquery.ui.tabs.css" />
     <Content Include="Content\CSS\themes\base\jquery.ui.theme.css" />
+    <Content Include="Content\Images\Loading.gif" />
     <Content Include="Content\Javascript\DemoPage.js" />
+    <Content Include="Content\Javascript\TextWizard.js" />
     <Content Include="Content\uploadify.swf" />
     <Content Include="Global.asax" />
+    <Content Include="Scripts\bbq.js" />
     <Content Include="Scripts\jquery-1.5.1-vsdoc.js" />
     <Content Include="Scripts\jquery-1.5.1.js" />
     <Content Include="Scripts\jquery-1.5.1.min.js" />
     <Content Include="Scripts\jquery-ui-1.8.11.js" />
     <Content Include="Scripts\jquery-ui-1.8.11.min.js" />
+    <Content Include="Scripts\jquery.form.wizard-min.js" />
+    <Content Include="Scripts\jquery.form.wizard.js" />
     <Content Include="Scripts\jquery.uploadify.v2.1.4.js" />
     <Content Include="Scripts\jquery.uploadify.v2.1.4.min.js" />
     <Content Include="Scripts\jquery.validate-vsdoc.js" />
