--- a/Source/OcrEngine/SimpleWebDemo/SimpleWebDemo.csproj
+++ b/Source/OcrEngine/SimpleWebDemo/SimpleWebDemo.csproj
@@ -127,6 +127,7 @@
     <Content Include="Scripts\jquery-1.5.1.min.js" />
     <Content Include="Scripts\jquery-ui-1.8.11.js" />
     <Content Include="Scripts\jquery-ui-1.8.11.min.js" />
+    <Content Include="Scripts\jquery.filedrop.js" />
     <Content Include="Scripts\jquery.form.wizard-min.js" />
     <Content Include="Scripts\jquery.form.wizard.js" />
     <Content Include="Scripts\jquery.uploadify.v2.1.4.js" />
